@@ -1,3 +1,4 @@
+using System;
 using System.Linq;
 using Fixie;
 using LightBDD.Core.Configuration;
@@ -69,7 +70,15 @@ namespace LightBDD.Fixie3
             configuration.ExceptionHandlingConfiguration()
                 .UpdateExceptionDetailsFormatter(new DefaultExceptionFormatter().WithTestFrameworkDefaults().Format);
 
-            OnConfigure(configuration);
+            try
+            {
+                OnConfigure(configuration);
+            }
+            catch (Exception ex)
+            {
+                configuration.ExecutionExtensionsConfiguration().CaptureFrameworkInitializationException(ex);
+            }
+
             return configuration;
         }
 
